--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -851,7 +851,7 @@ section {
 /*--------------------------------------------------------------
 # Menu Section
 --------------------------------------------------------------*/
-.menu #menu-flters {
+.avenues #menu-flters {
   padding: 0;
   margin: 0 auto 0 auto;
   list-style: none;
@@ -859,7 +859,7 @@ section {
   border-radius: 50px;
 }
 
-.menu #menu-flters li {
+.avenues #menu-flters li {
   cursor: pointer;
   display: inline-block;
   padding: 8px 16px 10px 16px;
@@ -874,16 +874,16 @@ section {
   border-radius: 50px;
 }
 
-.menu #menu-flters li:hover, .menu #menu-flters li.filter-active {
+.avenues #menu-flters li:hover, .avenues #menu-flters li.filter-active {
   color: #fff;
   background: #ffb03b;
 }
 
-.menu #menu-flters li:last-child {
+.avenues #menu-flters li:last-child {
   margin-right: 0;
 }
 
-.menu .menu-content {
+.avenues .menu-content {
   margin-top: 30px;
   overflow: hidden;
   display: flex;
@@ -891,8 +891,10 @@ section {
   position: relative;
 }
 
-.menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+.avenues .menu-content::after {
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -902,7 +904,7 @@ section {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-.menu .menu-content a {
+.avenues .menu-content a {
   padding-right: 10px;
   background: #fff;
   position: relative;
@@ -911,7 +913,7 @@ section {
   color: #ff9b08;
 }
 
-.menu .menu-content span {
+.avenues .menu-content span {
   background: #fff;
   position: relative;
   z-index: 3;
@@ -919,7 +921,7 @@ section {
   font-weight: 600;
 }
 
-.menu .menu-ingredients {
+.avenues .menu-ingredients {
   font-style: italic;
   font-size: 14px;
   font-family: "Comic Neue", sans-serif;
