--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: Arial, Helvetica, sans-serif;
   color: #444444;
 }
 
@@ -23,7 +24,8 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Satisfy", sans-serif;
+  /* font-family: "Satisfy", sans-serif; */
+  font-family: 'Yusei Magic', sans-serif;
 }
 
 /*--------------------------------------------------------------
