--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,11 @@ h1, h2, h3, h4, h5, h6 {
   width: 200px;
 }
 
+.smallgitamlogo{
+  height: 50px;
+  width: 50px;
+}
+
 @media (max-width: 992px) {
   #header {
     top: 0;
