--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1099,7 +1099,7 @@ section {
 }
 
 @media (min-width: 992px) {
-  .events .testimonial-item p {
+  .events .alumni-item p {
     width: 80%;
   }
 }
@@ -1217,16 +1217,16 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Chefs
+# board
 --------------------------------------------------------------*/
-.chefs {
+.board {
   background: url("../img/abhyaas.jpeg") center center no-repeat;
   background-size: cover;
   padding: 60px 0;
   position: relative;
 }
 
-.chefs::before {
+.board::before {
   content: '';
   position: absolute;
   left: 0;
@@ -1237,18 +1237,18 @@ section {
   z-index: 9;
 }
 
-.chefs .container {
+.board .container {
   position: relative;
   z-index: 10;
 }
 
-.chefs .member {
+.board .member {
   text-align: center;
   margin-bottom: 80px;
   position: relative;
 }
 
-.chefs .member .pic {
+.board .member .pic {
   overflow: hidden;
 }
 
@@ -1263,7 +1263,7 @@ section {
   margin-left: 46px;
 } */
 
-.chefs .member .member-info {
+.board .member .member-info {
   position: absolute;
   bottom: -80px;
   left: 20px;
@@ -1276,7 +1276,7 @@ section {
   transition: max-height 0.5s ease-in-out;
 }
 
-.chefs .member h4 {
+.board .member h4 {
   font-weight: 500;
   margin-bottom: 10px;
   font-size: 16px;
@@ -1286,7 +1286,7 @@ section {
   font-family: "Poppins", sans-serif;
 }
 
-.chefs .member h4::after {
+.board .member h4::after {
   content: '';
   position: absolute;
   display: block;
@@ -1297,46 +1297,46 @@ section {
   left: calc(50% - 25px);
 }
 
-.chefs .member span {
+.board .member span {
   font-style: italic;
   display: block;
   font-size: 13px;
 }
 
-.chefs .member .social {
+.board .member .social {
   margin-top: 15px;
 }
 
-.chefs .member .social a {
+.board .member .social a {
   transition: color 0.3s;
   color: #7a7368;
 }
 
-.chefs .member .social a:hover {
+.board .member .social a:hover {
   color: #ffb03b;
 }
 
-.chefs .member .social i {
+.board .member .social i {
   font-size: 16px;
   margin: 0 2px;
 }
 
 @media (max-width: 992px) {
-  .chefs .member {
+  .board .member {
     margin-bottom: 110px;
   }
 }
 
 @media (min-width: 1024px) {
-  .chefs {
+  .board {
     background-attachment: fixed;
   }
 }
 
 /*--------------------------------------------------------------
-# Testimonials
+# alumni
 --------------------------------------------------------------*/
-.testimonials {
+.alumni {
   padding: 80px 0;
   background: url("../img/alumni_800x800-790x310.webp") no-repeat;
   background-position: center center;
@@ -1344,33 +1344,33 @@ section {
   position: relative;
 }
 
-.testimonials::before {
+.alumni::before {
   content: "";
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(12, 11, 10, 0.7);
+  /* background: rgba(12, 11, 10, 0.7); */
 }
 
-.testimonials .section-header {
+.alumni .section-header {
   margin-bottom: 40px;
 }
 
-.testimonials .testimonial-item {
+.alumni .alumni-item {
   text-align: center;
   color: #fff;
 }
 
-.testimonials .testimonial-item .testimonial-img {
+.alumni .alumni-item .alumni-img {
   width: 100px;
   border-radius: 50%;
   border: 6px solid rgba(255, 255, 255, 0.15);
   margin: 0 auto;
 }
 
-.testimonials .testimonial-item h3 {
+.alumni .alumni-item h3 {
   font-size: 20px;
   font-weight: bold;
   margin: 10px 0 5px 0;
@@ -1378,48 +1378,48 @@ section {
   font-family: "Poppins", sans-serif;
 }
 
-.testimonials .testimonial-item h4 {
+.alumni .alumni-item h4 {
   font-size: 14px;
   color: #ddd;
   margin: 0 0 15px 0;
   font-family: "Comic Neue", sans-serif;
 }
 
-.testimonials .testimonial-item .stars {
+.alumni .alumni-item .stars {
   color: #ffb03b;
   margin-bottom: 10px;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+.alumni .alumni-item .quote-icon-left, .alumni .alumni-item .quote-icon-right {
   color: rgba(255, 255, 255, 0.4);
   font-size: 26px;
 }
 
-.testimonials .testimonial-item .quote-icon-left {
+.alumni .alumni-item .quote-icon-left {
   display: inline-block;
   left: -5px;
   position: relative;
 }
 
-.testimonials .testimonial-item .quote-icon-right {
+.alumni .alumni-item .quote-icon-right {
   display: inline-block;
   right: -5px;
   position: relative;
   top: 10px;
 }
 
-.testimonials .testimonial-item p {
+.alumni .alumni-item p {
   font-style: italic;
   margin: 0 auto 15px auto;
   color: #eee;
 }
 
-.testimonials .owl-nav, .testimonials .owl-dots {
+.alumni .owl-nav, .alumni .owl-dots {
   margin-top: 5px;
   text-align: center;
 }
 
-.testimonials .owl-dot {
+.alumni .owl-dot {
   display: inline-block;
   margin: 0 5px;
   width: 12px;
@@ -1428,11 +1428,11 @@ section {
   background-color: rgba(255, 255, 255, 0.4) !important;
 }
 
-.testimonials .owl-dot.active {
+.alumni .owl-dot.active {
   background-color: #ffb03b !important;
 }
 
-.testimonial-item{
+.alumni-item{
   display: flex;
 }
 
@@ -1450,13 +1450,13 @@ section {
 }
 
 @media (min-width: 1024px) {
-  .testimonials {
+  .alumni {
     background-attachment: fixed;
   }
 }
 
 @media (min-width: 992px) {
-  .testimonials .testimonial-item p {
+  .alumni .alumni-item p {
     width: 80%;
   }
 }
